--- a/df-environment/df-env-vagrant/Vagrantfile
+++ b/df-environment/df-env-vagrant/Vagrantfile
@@ -13,11 +13,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   #config.vm.synced_folder "~/.gnupg", "/root/.gnupg", owner: "root", group: "root"
 
   #Config port forward
-  #For zeppeline
+  #For Zeppeline
   config.vm.network "forwarded_port", guest: 8080, host: 8080
-  # For Elastic Search
+  #For Elastic Search
   config.vm.network "forwarded_port", guest: 9200, host: 9200
-
+  #For Grafana
+  config.vm.network "forwarded_port", guest: 3000, host: 3000
 
   config.vm.provider "virtualbox" do |vb|
     vb.customize ["modifyvm", :id, "--memory", "4096"]
